* Unreleased - Marek Jędryka <jedryka89@gmail.com> - v2.6
    - added command line arguments --help and --lang support

* Wed Nov 14 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.5.1
    - relative path bug-fix

* Tue Nov 13 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.5
    - project moved to CMake
    - Conditional compilation: disable or enable metadata support
    - Settings and DetailsBrowser classes added
    - Image width and height line edit replaced by spin box
    - faster selection using Exiv2 image size detection if it's available
    - bugfix: delete selected items from list in ConvertDialog - now delete all selected items
    - shared data manipulation methods moved to SharedInformation;
    - save and enabled fields in MetadataUtils::Metadata removed - now used Settings fields
    - DetailsOptions namespace moved to separated file
    - widgets moved to separated directory
    - option and selection dialogs splited to few widgets for more flexibility
    - remove temporary files at end of session
    - width of SVG images render in DetailsBrowser patch
    - drop event improved
    - myQTreeWidget renamed to TreeWidget, some code moved from ConvertDialog
    - external columns into tree view like size (px,K/MiB) added
    - new options group box "File list" and header view context menu for TreeWidget settings
    - converting from SVG bug when dest size is more than default size fixed
    - keep aspect ratio added to settings
    - English translation added, Polish translation updated
    - many files moved from resource file to another files

* Tue Jul 31 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.4
    - Changelog file provided
    - Selected file (or files) details in splitter on rigth option added
    - Easier translations of about dialog, about dialog corrected
    - Droped QObject::tr() translated strings, non QObject inherited classes are using Q_DECLARE_TR_FUNCTIONS() macro now
    - Added selection/import dialog