@@ -1,5 +1,6 @@
 * Unreleased - Marek Jędryka <jedryka89@gmail.com> - v2.6
     - added command line arguments --help and --lang support
+    - added background color in convertion options
 
 * Wed Nov 14 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.5.1
     - relative path bug-fix
